# controlled-review

./: .gitignore  README.md  pyproject.toml
.superpowers/sdd/: progress.md  review-b6320cd..052c3b9.diff  task-1-brief.md  task-1-report.md  task-10-report.md  task-2-brief.md  task-5-report.md  task-8-report.md
adapters/codex/: AGENT.md
adapters/reasonix/: SKILL.md
adapters/trae/: SKILL.md
adapters/workbuddy/: SKILL.md
docs/reviews/: 2026-07-21-controlled-review-review.md
src/controlled_review/: __init__.py
src/controlled_review/documents/: __init__.py  docx_reader.py  markdown_reader.py  models.py  office_recalc.py  xlsx_reader.py
src/controlled_review/domain/: models.py
src/controlled_review/finance/: __init__.py  checks.py  (+3 more)
tests/contract/: test_platform_adapter.py  test_tool_contract.py
tests/e2e/: _helpers.py  conftest.py  test_failure_matrix.py  test_full_review.py  test_platform_switch.py
tests/fixtures/: __init__.py  docx_factory.py  xlsx_factory.py
tests/integration/: conftest.py  test_assignments.py  test_excel_recalc_windows.py  test_output_package.py  test_project_recovery.py  test_review_retries.py  test_web_ui.py
tests/unit/: conftest.py  test_canary_gate.py  test_docx_reader.py  test_domain_models.py  test_evidence.py  test_financial_checks.py  test_financial_discovery.py  test_financial_mapping.py  test_financial_numbers.py  test_markdown_linker.py  test_model_client.py  test_office_recalc.py  test_official_service.py  test_package.py  test_project_inputs.py  test_review_gate.py  test_state_store.py  test_xlsx_reader.py
(+21 files in other folders)
